--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-starter</artifactId>
             <version>4.6.1</version>
+            <!---->
             <exclusions>
                 <exclusion>
                     <groupId>org.axonframework</groupId>
@@ -63,7 +64,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.13</version>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
